--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,101 +4,181 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/backgroud_login_register"
-    android:padding="15dp">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:gravity="center"
-        android:foregroundGravity="center_horizontal"
-        android:text="Đăng nhập"
-        android:textSize="45dp"
-        android:textStyle="bold"/>
-    <LinearLayout
+    android:background="@drawable/backgroud_login_register">
+    <RelativeLayout
+        android:id="@+id/rl_login"
         android:padding="15dp"
         android:gravity="center"
+        android:layout_gravity="center"
         android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
         android:background="@drawable/login_register_form">
-        <EditText
-            android:id="@+id/edt_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Tài khoản"
-            android:padding="12dp"
-            android:textSize="20dp"
-            android:layout_marginVertical="10dp"
-            android:textColorHint="@android:color/holo_orange_light"
-            android:drawableLeft="@drawable/ic_baseline_person_24"
-            android:background="@drawable/border"
-            android:drawablePadding="12dp"/>
-        <EditText
-            android:id="@+id/edt_pass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Mật khẩu"
-            android:padding="12dp"
-            android:textSize="20dp"
-            android:layout_marginVertical="10dp"
-            android:textColorHint="@android:color/holo_orange_light"
-            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
-            android:background="@drawable/border"
-            android:drawablePadding="12dp"/>
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nhớ mật khẩu"
-            android:textSize="17dp"/>
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Đăng nhập"
-            android:textSize="18dp"
-            android:paddingHorizontal="15dp"
-            android:layout_marginHorizontal="5dp"
-            android:textColor="@android:color/white"
-            android:background="@drawable/border_bottom"/>
         <LinearLayout
+            android:id="@+id/ll_reply_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingVertical="13dp"
+            android:layout_marginTop="-20dp"
+            android:paddingHorizontal="50dp"
+            android:visibility="visible"
+            android:orientation="vertical"
             android:gravity="center">
             <TextView
-                android:id="@+id/btn_face"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:foregroundGravity="center_horizontal"
                 android:gravity="center"
-                android:text="Facebook"
-                android:textSize="18dp"
-                android:drawablePadding="-13dp"
-                android:layout_marginHorizontal="15dp"
-                android:background="@drawable/background_link"
-                android:drawableLeft="@drawable/ic_facebook_logo"/>
-            <TextView
-                android:id="@+id/btn_google"
-                android:layout_width="150dp"
+                android:text="Đăng nhập"
+                android:textColor="#2d3436"
+                android:textSize="45dp"
+                android:textStyle="bold" />
+            <EditText
+                android:id="@+id/edt_email"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Google"
-                android:textSize="18dp"
-                android:drawablePadding="-20dp"
-                android:layout_marginHorizontal="15dp"
-                android:background="@drawable/background_link"
-                android:drawableLeft="@drawable/ic_google_logo"/>
+                android:layout_marginVertical="10dp"
+                android:background="@drawable/border_bottom"
+                android:drawableLeft="@drawable/ic_baseline_person_24"
+                android:drawablePadding="12dp"
+                android:inputType="textEmailAddress"
+                android:hint="Tài khoản"
+                android:padding="12dp"
+                android:textColorHint="@android:color/holo_orange_light"
+                android:textSize="20dp" />
+            <EditText
+                android:id="@+id/edt_pass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:background="@drawable/border_bottom"
+                android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
+                android:drawablePadding="12dp"
+                android:inputType="textPassword"
+                android:hint="Mật khẩu"
+                android:padding="12dp"
+                android:textColorHint="@android:color/holo_orange_light"
+                android:textSize="20dp" />
+            <Button
+                android:id="@+id/btn_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/border_bottom"
+                android:text="Đăng nhập"
+                android:textColor="#636e72"
+                android:textSize="20dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:paddingVertical="13dp"
+                android:gravity="center">
+                <TextView
+                    android:id="@+id/btn_face"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="15dp"
+                    android:background="@drawable/background_link"
+                    android:drawableLeft="@drawable/ic_facebook_logo"
+                    android:drawablePadding="-13dp"
+                    android:gravity="center"
+                    android:text="Facebook"
+                    android:textSize="18dp" />
+                <TextView
+                    android:id="@+id/btn_google"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="15dp"
+                    android:background="@drawable/background_link"
+                    android:drawableLeft="@drawable/ic_google_logo"
+                    android:drawablePadding="-20dp"
+                    android:gravity="center"
+                    android:text="Google"
+                    android:textSize="18dp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginHorizontal="5dp"
+                    android:background="@android:color/transparent"
+                    android:paddingVertical="10dp"
+                    android:text="Bạn chưa có tài khoản?"
+                    android:textColor="#636e72"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/btn_register_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginTop="-17dp"
+                    android:background="@android:color/transparent"
+                    android:paddingVertical="10dp"
+                    android:text="Đăng ký ngay"
+                    android:textColor="#ffffff"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
         </LinearLayout>
-        <TextView
-            android:id="@+id/bt_register"
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:id="@+id/ll_call_login"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Bạn chưa có tài khoản? Đăng ký ngay."
-            android:textSize="18dp"
-            android:paddingVertical="10dp"
-            android:layout_marginHorizontal="5dp"
-            android:textColor="#00FFFF"
-            android:textStyle="bold"
-            android:background="@android:color/transparent"/>
-    </LinearLayout>
+            android:layout_centerInParent="true"
+            android:orientation="vertical"
+            android:visibility="visible"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:text="logo"
+                android:src="@drawable/logo"/>
+            <Button
+                android:id="@+id/btn_call_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:textSize="20dp"
+                android:layout_marginVertical="15dp"
+                android:paddingHorizontal="50dp"
+                android:background="@drawable/border_bottom"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginHorizontal="5dp"
+                    android:background="@android:color/transparent"
+                    android:paddingVertical="10dp"
+                    android:text="Bạn chưa có tài khoản?"
+                    android:textColor="#636e72"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/btn_register_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginTop="-17dp"
+                    android:background="@android:color/transparent"
+                    android:paddingVertical="10dp"
+                    android:text="Đăng ký ngay"
+                    android:textColor="#ffffff"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
