--- a/app/src/main/res/drawable/login_register_form.xml
+++ b/app/src/main/res/drawable/login_register_form.xml
@@ -2,8 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#CCBBBBBB"/>
-            <corners android:radius="30dp"/>
+            <solid android:color="#fede00"/>
+            <corners
+                android:bottomLeftRadius="500dp"
+                android:bottomRightRadius="500dp"/>
         </shape>
     </item>
     <item
