--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,6 +2,119 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:background="#fede00">
+    <LinearLayout
+        android:id="@+id/ll_reply_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-20dp"
+        android:paddingHorizontal="50dp"
+        android:visibility="invisible"
+        android:orientation="vertical"
+        android:gravity="center">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:foregroundGravity="center_horizontal"
+            android:gravity="center"
+            android:text="Đăng nhập"
+            android:textColor="#2d3436"
+            android:textSize="45dp"
+            android:textStyle="bold" />
+        <EditText
+            android:id="@+id/edt_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:background="@drawable/border_bottom"
+            android:drawableLeft="@drawable/ic_baseline_person_24"
+            android:drawablePadding="12dp"
+            android:inputType="textEmailAddress"
+            android:hint="Tài khoản"
+            android:padding="12dp"
+            android:textColorHint="@android:color/holo_orange_light"
+            android:textSize="20dp" />
+        <EditText
+            android:id="@+id/edt_pass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:background="@drawable/border_bottom"
+            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
+            android:drawablePadding="12dp"
+            android:inputType="textPassword"
+            android:hint="Mật khẩu"
+            android:padding="12dp"
+            android:textColorHint="@android:color/holo_orange_light"
+            android:textSize="20dp" />
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/border_bottom"
+            android:text="Đăng nhập"
+            android:textColor="#636e72"
+            android:textSize="20dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:paddingVertical="13dp"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/btn_face"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:background="@drawable/background_link"
+                android:drawableLeft="@drawable/ic_facebook_logo"
+                android:drawablePadding="-13dp"
+                android:gravity="center"
+                android:text="Facebook"
+                android:textSize="18dp" />
+            <TextView
+                android:id="@+id/btn_google"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:background="@drawable/background_link"
+                android:drawableLeft="@drawable/ic_google_logo"
+                android:drawablePadding="-20dp"
+                android:gravity="center"
+                android:text="Google"
+                android:textSize="18dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginHorizontal="5dp"
+                android:background="@android:color/transparent"
+                android:paddingVertical="10dp"
+                android:text="Bạn chưa có tài khoản?"
+                android:textColor="#636e72"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/btn_register_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginTop="-17dp"
+                android:background="@android:color/transparent"
+                android:paddingVertical="10dp"
+                android:text="Đăng ký ngay"
+                android:textColor="#ffffff"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
